--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Pong</title>
-	</head>
-	<body>
-		<div class="game-wrapper">
-			<h1>Pong</h1>
-			<div id="game"></div>
-			<!-- Rough-out your SVG mark-up here to start... -->
-		</div>
-		<script type="text/javascript" src="build/bundle.js"></script>
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Pong</title>
+</head>
+
+<body>
+	<div class="game-wrapper">
+		<h1>Pong</h1>
+		<div id="game"></div>
+		<!-- Rough-out your SVG mark-up here to start... -->
+
+		<svg width="512" height="256">
+			<rect width="512" height="256"
+				style="fill:rgb(0, 255, 234);stroke-width:3;stroke:rgba(255, 230, 0, 0.014)" />
+			<line x1="255" y1="0" x2="255" y2="255" stroke="silver" stroke-dasharray="4 1" />
+			<svg height="100" width="100"></svg>
+			<circle cx="255" cy="120" r="2.5" stroke="black" stroke-width="2" fill="yellow" />
+	</div>
+	<script type="text/javascript" src="build/bundle.js"></script>
+</body>
+
 </html>
