--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 	<title>Pong</title>
 </head>
 
-<body>
-	<div class="game-wrapper">
-		<h1>Pong</h1>
-		<div id="game"></div>
 
+<body background="Images/moving-wallpaper.jpg">
+
+
+	<div class="container">
+		<div class="game-wrapper">
+			<h1>
+				<marquee behavior="alternate">PONG</marquee>
+			</h1>
+			<div id="game"></div>
+		</div>
 	</div>
-
 	<script type="text/javascript" src="build/bundle.js"></script>
 </body>
 
